# aisbot

./: .gitignore  AGENTS.md  COMPRESSION.md  Dockerfile  README.md  config.yaml  mcp.yaml  pyproject.toml
.github/agents/: pm.agent.md
aisbot/: __init__.py  __main__.py  config.yaml  dummy_channel.py  mcp_http_server.py  mcp_server.py  test.py
aisbot/agent/: __init__.py  compression.py  context.py  loop.py  mcpproxy.py  memory.py  mpcproxy.py  skills.py  subagent.py
aisbot/agent/tools/: __init__.py  base.py  cron.py  filesystem.py  message.py  registry.py  shell.py  spawn.py  web.py
aisbot/bus/: __init__.py  dbus.py  dds_provider.py  events.py  factory.py  provider.py  squeue.py  zeno.py  zenoh_provider.py
aisbot/channels/: __init__.py  base.py  dingtalk.py  discord.py  feishu.py  manager.py  qq.py  telegram.py  whatsapp.py
aisbot/cli/: __init__.py  commands.py
aisbot/config/: __init__.py  loader.py  schema.py
aisbot/cron/: __init__.py  service.py
aisbot/heartbeat/: __init__.py  service.py
aisbot/providers/: __init__.py  base.py  factory.py  liteprovider.py  provider.py
aisbot/session/: __init__.py  manager.py
aisbot/skills/: README.md
aisbot/skills/cron/: SKILL.md
aisbot/skills/github/: SKILL.md
aisbot/skills/summarize/: SKILL.md
aisbot/skills/tmux/: SKILL.md
aisbot/skills/tmux/scripts/: find-sessions.sh
aisbot/skills/weather/: SKILL.md
aisbot/utils/: __init__.py  helpers.py
tests/: test_compression.py  test_compression_default.py  test_mcp_loading.py
