[project]
name = "aisbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "minidds>=1.0.0",
    "loguru>=0.7.0",
    "uv>=0.10.0",
    "rich>=14.3.2",
    "typer>=0.21.1",
    "telegram>=0.0.1",
    "lark>=1.3.1",
    "httpx>=0.28.1",
    "websockets>=16.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "litellm>=1.81.9",
    "socksio>=1.0.0",
    "langchain-nvidia-ai-endpoints>=1.0.3",
    "gh>=0.0.4",
    "mcp>=1.26.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aisbot"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "aisbot",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
aisbot = { workspace = true }
